@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.0" provider-name="L0RE">
+<addon id="plugin.video.euronews_com" name="euronews.com" version="2.1.1" provider-name="L0RE">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
+		<import addon="plugin.video.youtube" version="5.3.7"/>
 		<import addon="script.module.beautifulsoup4" version="4.3.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
@@ -25,10 +26,9 @@
 			<icon>icon.png</icon>
 			<fanart>fanart.jpg</fanart>
 		</assets>
-		<news>[B][COLOR orangered]Version 2.1.0  (16.09.2018)[/COLOR][/B] by realvito[CR]
-- fixed: euronews - LIVE TV
-- added: Video - Laufzeit und Plot 
-- optimized: Script komplett überarbeitet und unnötige Inhalte entfernt
+		<news>[B][COLOR orangered]Version 2.1.1  (30.09.2018)[/COLOR][/B] by realvito[CR]
+- fixed: mehrfache Video-Links desselben Artikels
+- added: Videos - bevorzugt über Youtube abspielen (höhere Qualität), sofern Link vorhanden (settings)
 		</news>
 	</extension>
 </addon>
