@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-	<setting label="30100" type="select" id="language" lvalues="30101|30102|30103|30104|30105|30106|30107|30108|30109|30110|30111|30112|30113" default="0" option="int"/>
+	<category label="30000">
+		<setting label="30230" type="lsep"/>
+		<setting label="30110" type="select" id="language" lvalues="30111|30112|30113|30114|30115|30116|30117|30118|30119|30120|30121|30122|30123" default="0" option="int"/>
+		<setting type="sep"/>
+		<setting label="30231" type="lsep"/>
+		<setting label="30124" type="bool" id="preferredStream_YOUTUBE" default="true"/>
+		<setting label="30350" type="text" option="readable"/>
+	</category>
 </settings>
